# muocr

./: .gitignore  README.md
cer_tools/: .gitignore  cer.py  cer_calculation.py  main_ui_app.py  main_ui_app.spec  pyproject.toml  requirements.txt
cer_tools/tests/: test_cer.py  test_data.csv
