[tool.poetry]
name = "cer-tools"
version = "0.1.0"
description = ""
authors = ["Wichai Pawgasame <wpawgasa@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jiwer = "^3.0.5"
pandas = "^2.2.3"
numpy = "^2.1.3"
pyqt6 = "^6.7.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
